# django-basic-form-builder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  RELEASE_NOTES.md  manage.py  pyproject.toml
.github/workflows/: publish.yml
formbuilder/: admin.py  apps.py  compat.py  models.py  schema_types.py
formbuilder/api/: serializers.py  urls.py  views.py
formbuilder/fixtures/: demo_form.json
formbuilder/migrations/: 0001_initial.py  0002_alter_formfield_field_type_fieldoption.py  0003_formfield_question_alter_formfield_label.py
formbuilder/services/: schema_builder.py
formbuilder/static/formbuilder/admin/css/: formfield_admin.css
formbuilder/static/formbuilder/admin/js/: formfield_admin.js
formbuilder/tests/: conftest.py  test_admin.py  test_api.py  test_compat.py  test_models.py  test_schema_builder.py
formbuilder_test_site/: settings.py  urls.py
